feat: Implement core frontend UI with Tailwind CSS, including authentication, profile management, and chat features, and improve Gemini API key handling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>College List AI</title>
+    <!-- Geist Font (Sans & Mono) -->
+    <link href="https://cdn.jsdelivr.net/npm/geist@1.0.0/dist/fonts/geist-sans/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/geist@1.0.0/dist/fonts/geist-mono/style.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
